<resources>
    <string name="app_name">Vio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">494900873089-l14k9df8ds231lphjln111im4ric58lg.apps.googleusercontent.com</string>

    <string name="you">You</string>
    <string name="message">Message</string>
    <string name="dialog_delete_message">Do you want to delete this message?</string>
    <string name="delete">Delete</string>
    <string name="delete_both">Delete for both</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="login_subtext">Please login to continue</string>
    <string name="welcome_chatme">Welcome to Vio</string>
    <string name="nickname">Nickname</string>
    <string name="user_email_placeholder">Email</string>
    <string name="log_out">Log out</string>
    <string name="messages_hint">Type your message...</string>
    <string name="send">Send</string>
    <string name="item_users_text">Users</string>
    <string name="item_users_number">%1$d users</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="join_us">Join us</string>
    <string name="copied_message">Message copied</string>
    <string name="copied_message_label">Copied</string>
    <string name="alert_title">Alert</string>
    <string name="alert_message">Are you sure?</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>
    <string name="unknown">Unknown</string>
    <string name="share_message">Share message</string>
    <string name="messages_list_cd">Messages list</string>
    <string name="send_message_cd">Send message</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_share">Share</string>
    <string name="user_avatar">User avatar</string>
    <string name="logout_warning">If you sign out, all messages will be deleted for security reasons. When you sign in again, you may not be able to see them.</string>
    <string name="logged_out">Signed out successfully</string>
    <string name="no_name">No name</string>
    <string name="no_email">No email</string>
    <string name="edited_view_history">Edited • View history</string>
    <string name="edited_hide_history">Edited • Hide history</string>
    <string name="edit_not_allowed">You can only edit your own message</string>
    <string name="back_button_cd">Back</string>
    <string name="add_friend_first">Bạn cần kết bạn trước khi nhắn tin</string>
    <string name="recording_hint">Đang ghi âm... Nhấn Gửi để gửi</string>
    <string name="recording_start">Bắt đầu ghi âm</string>
    <string name="recording_saved">Đã lưu ghi âm. Nhấn Gửi để gửi</string>
    <string name="recording_error">Không thể ghi âm, vui lòng thử lại</string>
    <string name="voice_permission_denied">Ứng dụng cần quyền ghi âm để gửi voice</string>
    <string name="voice_permission_rationale">Cho phép ghi âm để gửi voice message</string>
    <string name="voice_uploading">Đang tải voice...</string>
    <string name="voice_message_label">Tin nhắn thoại</string>
    <string name="voice_sent">Đã gửi voice message</string>
    <string name="voice_send_error">Lỗi gửi voice: %1$s</string>
    <string name="voice_play_error">Không phát được voice, thử lại</string>

</resources>
